@@ -2,6 +2,10 @@ After CMF 1.6.4
 
   Bug Fixes
 
+    - CMFCore.CMFBTreeFolder: CMFBTreeFolders could not be used as the
+      toplevel /Members container. 
+      (http://www.zope.org/Collectors/CMF/441)
+
     - CMFCore.WorkflowTool: Using the '(Default)' keyword for a type's 
       workflow chain will now reset any custom workflow chains for the type
       (http://www.zope.org/Collectors/CMF/475)
